# Generated by Django 4.2.27 on 2026-01-13 02:18

from decimal import Decimal
from django.conf import settings
import django.contrib.auth.models
import django.contrib.auth.validators
import django.core.validators
from django.db import migrations, models
import django.db.models.deletion
import django.utils.timezone


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='User',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='email address')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('role', models.CharField(choices=[('admin', 'Admin'), ('landlord', 'Landlord'), ('tenant', 'Tenant')], default='tenant', help_text='User role determines access permissions', max_length=20)),
                ('profile_picture', models.ImageField(blank=True, help_text="User's profile photo", null=True, upload_to='profile_pictures/')),
                ('phone', models.CharField(blank=True, help_text='Contact phone number', max_length=20, null=True)),
                ('must_change_password', models.BooleanField(default=False, help_text='Force user to change password on next login')),
                ('last_login_at', models.DateTimeField(blank=True, help_text='Timestamp of last login', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'User',
                'verbose_name_plural': 'Users',
                'ordering': ['-created_at'],
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='Account',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('code', models.CharField(help_text='Unique account code', max_length=20, unique=True)),
                ('name', models.CharField(help_text='Account name', max_length=200)),
                ('account_type', models.CharField(choices=[('asset', 'Asset'), ('liability', 'Liability'), ('equity', 'Equity'), ('income', 'Income'), ('expense', 'Expense')], help_text='Type of account', max_length=20)),
                ('description', models.TextField(blank=True, help_text='Account description', null=True)),
                ('balance', models.DecimalField(decimal_places=2, default=0, help_text='Current account balance', max_digits=15)),
                ('is_active', models.BooleanField(default=True, help_text='Is this account active?')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('parent_account', models.ForeignKey(blank=True, help_text='Parent account for hierarchy', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='sub_accounts', to='api.account')),
            ],
            options={
                'verbose_name': 'Account',
                'verbose_name_plural': 'Accounts',
                'ordering': ['code'],
            },
        ),
        migrations.CreateModel(
            name='JournalEntry',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('entry_date', models.DateField(help_text='Date of the journal entry')),
                ('description', models.TextField(help_text='Entry description')),
                ('reference', models.CharField(blank=True, help_text='Reference number or document', max_length=100, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('created_by', models.ForeignKey(help_text='User who created this entry', null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Journal Entry',
                'verbose_name_plural': 'Journal Entries',
                'ordering': ['-entry_date'],
            },
        ),
        migrations.CreateModel(
            name='Lease',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('start_date', models.DateField(help_text='Lease start date')),
                ('end_date', models.DateField(help_text='Lease end date')),
                ('monthly_rent', models.DecimalField(decimal_places=2, help_text='Monthly rent amount', max_digits=10, validators=[django.core.validators.MinValueValidator(Decimal('0.01'))])),
                ('security_deposit', models.DecimalField(decimal_places=2, default=0, help_text='Security deposit amount', max_digits=10, validators=[django.core.validators.MinValueValidator(Decimal('0'))])),
                ('status', models.CharField(choices=[('active', 'Active'), ('expired', 'Expired'), ('terminated', 'Terminated'), ('pending', 'Pending')], default='pending', help_text='Current lease status', max_length=20)),
                ('document', models.FileField(blank=True, help_text='Signed lease agreement document', null=True, upload_to='lease_documents/')),
                ('notes', models.TextField(blank=True, help_text='Additional lease terms and notes', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('landlord', models.ForeignKey(help_text='Property landlord', limit_choices_to={'role': 'landlord'}, on_delete=django.db.models.deletion.CASCADE, related_name='landlord_leases', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Lease',
                'verbose_name_plural': 'Leases',
                'ordering': ['-start_date'],
            },
        ),
        migrations.CreateModel(
            name='Property',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(help_text='Property name or title', max_length=200)),
                ('property_type', models.CharField(choices=[('residential', 'Residential'), ('commercial', 'Commercial'), ('mixed', 'Mixed Use')], help_text='Type of property', max_length=20)),
                ('description', models.TextField(blank=True, help_text='Detailed description of the property', null=True)),
                ('region', models.CharField(help_text='Region/State', max_length=100)),
                ('district', models.CharField(help_text='District/County', max_length=100)),
                ('ward', models.CharField(blank=True, help_text='Ward/Neighborhood', max_length=100, null=True)),
                ('street', models.CharField(help_text='Street address', max_length=200)),
                ('bedrooms', models.IntegerField(default=0, help_text='Total number of bedrooms', validators=[django.core.validators.MinValueValidator(0)])),
                ('bathrooms', models.IntegerField(default=0, help_text='Total number of bathrooms', validators=[django.core.validators.MinValueValidator(0)])),
                ('area_sqft', models.DecimalField(blank=True, decimal_places=2, help_text='Total area in square feet', max_digits=10, null=True, validators=[django.core.validators.MinValueValidator(Decimal('0.01'))])),
                ('payment_terms', models.TextField(blank=True, help_text='Payment terms and conditions', null=True)),
                ('status', models.CharField(choices=[('vacant', 'Vacant'), ('occupied', 'Occupied'), ('partially_occupied', 'Partially Occupied'), ('maintenance', 'Under Maintenance')], default='vacant', help_text='Current property status', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('landlord', models.ForeignKey(help_text='Property owner/landlord', limit_choices_to={'role': 'landlord'}, on_delete=django.db.models.deletion.CASCADE, related_name='properties', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Property',
                'verbose_name_plural': 'Properties',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Unit',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('unit_number', models.CharField(help_text="Unit number or identifier (e.g., 'A1', '101')", max_length=50)),
                ('floor', models.IntegerField(blank=True, help_text='Floor number', null=True)),
                ('bedrooms', models.IntegerField(default=1, help_text='Number of bedrooms in this unit', validators=[django.core.validators.MinValueValidator(0)])),
                ('bathrooms', models.IntegerField(default=1, help_text='Number of bathrooms in this unit', validators=[django.core.validators.MinValueValidator(0)])),
                ('rent_amount', models.DecimalField(decimal_places=2, help_text='Monthly rent amount', max_digits=10, validators=[django.core.validators.MinValueValidator(Decimal('0.01'))])),
                ('status', models.CharField(choices=[('available', 'Available'), ('occupied', 'Occupied'), ('maintenance', 'Under Maintenance'), ('reserved', 'Reserved')], default='available', help_text='Current unit status', max_length=20)),
                ('description', models.TextField(blank=True, help_text='Unit description and amenities', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('property', models.ForeignKey(help_text='Property this unit belongs to', on_delete=django.db.models.deletion.CASCADE, related_name='units', to='api.property')),
            ],
            options={
                'verbose_name': 'Unit',
                'verbose_name_plural': 'Units',
                'ordering': ['property', 'unit_number'],
                'unique_together': {('property', 'unit_number')},
            },
        ),
        migrations.CreateModel(
            name='Tenant',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('phone', models.CharField(help_text='Primary phone number', max_length=20)),
                ('alternative_phone', models.CharField(blank=True, help_text='Alternative contact number', max_length=20, null=True)),
                ('identification_type', models.CharField(blank=True, help_text='Type of ID (e.g., Passport, National ID)', max_length=50, null=True)),
                ('identification_number', models.CharField(blank=True, help_text='ID number', max_length=100, null=True)),
                ('emergency_contact_name', models.CharField(blank=True, help_text="Emergency contact person's name", max_length=200, null=True)),
                ('emergency_contact_phone', models.CharField(blank=True, help_text='Emergency contact phone number', max_length=20, null=True)),
                ('emergency_contact_relationship', models.CharField(blank=True, help_text='Relationship to tenant', max_length=100, null=True)),
                ('occupation', models.CharField(blank=True, help_text="Tenant's occupation", max_length=200, null=True)),
                ('employer', models.CharField(blank=True, help_text='Employer name', max_length=200, null=True)),
                ('notes', models.TextField(blank=True, help_text='Additional notes about the tenant', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('user', models.OneToOneField(help_text='User account for this tenant', limit_choices_to={'role': 'tenant'}, on_delete=django.db.models.deletion.CASCADE, related_name='tenant_profile', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Tenant',
                'verbose_name_plural': 'Tenants',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='PropertyImage',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('image', models.ImageField(help_text='Property photo', upload_to='property_images/')),
                ('caption', models.CharField(blank=True, help_text='Image caption or description', max_length=200, null=True)),
                ('is_primary', models.BooleanField(default=False, help_text='Primary/featured image for the property')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('property', models.ForeignKey(help_text='Property this image belongs to', on_delete=django.db.models.deletion.CASCADE, related_name='images', to='api.property')),
            ],
            options={
                'verbose_name': 'Property Image',
                'verbose_name_plural': 'Property Images',
                'ordering': ['-is_primary', '-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Payment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('amount', models.DecimalField(decimal_places=2, help_text='Payment amount', max_digits=10, validators=[django.core.validators.MinValueValidator(Decimal('0.01'))])),
                ('payment_method', models.CharField(choices=[('cash', 'Cash'), ('bank_transfer', 'Bank Transfer'), ('mobile_money', 'Mobile Money'), ('check', 'Check'), ('card', 'Credit/Debit Card')], help_text='How the payment was made', max_length=20)),
                ('transaction_id', models.CharField(blank=True, help_text='Transaction reference number', max_length=200, null=True)),
                ('due_date', models.DateField(help_text='Payment due date')),
                ('paid_date', models.DateField(blank=True, help_text='Actual payment date', null=True)),
                ('status', models.CharField(choices=[('pending', 'Pending'), ('completed', 'Completed'), ('overdue', 'Overdue'), ('partial', 'Partial'), ('cancelled', 'Cancelled')], default='pending', help_text='Payment status', max_length=20)),
                ('proof_document', models.FileField(blank=True, help_text='Payment receipt or proof', null=True, upload_to='payment_proofs/')),
                ('notes', models.TextField(blank=True, help_text='Payment notes', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('lease', models.ForeignKey(help_text='Associated lease agreement', on_delete=django.db.models.deletion.CASCADE, related_name='payments', to='api.lease')),
                ('property', models.ForeignKey(help_text='Property the payment is for', on_delete=django.db.models.deletion.CASCADE, related_name='payments', to='api.property')),
                ('tenant', models.ForeignKey(help_text='Tenant making the payment', on_delete=django.db.models.deletion.CASCADE, related_name='payments', to='api.tenant')),
            ],
            options={
                'verbose_name': 'Payment',
                'verbose_name_plural': 'Payments',
                'ordering': ['-due_date'],
            },
        ),
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('category', models.CharField(choices=[('maintenance', 'Maintenance Request'), ('complaint', 'Complaint'), ('inquiry', 'Inquiry'), ('announcement', 'Announcement'), ('payment', 'Payment Related'), ('other', 'Other')], help_text='Notification category', max_length=20)),
                ('priority', models.CharField(choices=[('low', 'Low'), ('medium', 'Medium'), ('high', 'High'), ('urgent', 'Urgent')], default='medium', help_text='Priority level', max_length=10)),
                ('subject', models.CharField(help_text='Notification subject', max_length=200)),
                ('description', models.TextField(help_text='Detailed description')),
                ('status', models.CharField(choices=[('pending', 'Pending'), ('in_progress', 'In Progress'), ('resolved', 'Resolved'), ('closed', 'Closed')], default='pending', help_text='Current status', max_length=20)),
                ('landlord_response', models.TextField(blank=True, help_text="Landlord's response", null=True)),
                ('responded_at', models.DateTimeField(blank=True, help_text='Response timestamp', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('lease', models.ForeignKey(help_text='Associated lease', on_delete=django.db.models.deletion.CASCADE, related_name='notifications', to='api.lease')),
                ('responded_by', models.ForeignKey(blank=True, help_text='User who responded', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='notification_responses', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Notification',
                'verbose_name_plural': 'Notifications',
                'ordering': ['-created_at'],
            },
        ),
        migrations.AddField(
            model_name='lease',
            name='property',
            field=models.ForeignKey(help_text='Property being leased', on_delete=django.db.models.deletion.CASCADE, related_name='leases', to='api.property'),
        ),
        migrations.AddField(
            model_name='lease',
            name='tenant',
            field=models.ForeignKey(help_text='Tenant renting the unit', on_delete=django.db.models.deletion.CASCADE, related_name='leases', to='api.tenant'),
        ),
        migrations.AddField(
            model_name='lease',
            name='unit',
            field=models.ForeignKey(help_text='Specific unit being leased', on_delete=django.db.models.deletion.CASCADE, related_name='leases', to='api.unit'),
        ),
        migrations.CreateModel(
            name='JournalEntryLine',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('debit', models.DecimalField(decimal_places=2, default=0, help_text='Debit amount', max_digits=15, validators=[django.core.validators.MinValueValidator(Decimal('0'))])),
                ('credit', models.DecimalField(decimal_places=2, default=0, help_text='Credit amount', max_digits=15, validators=[django.core.validators.MinValueValidator(Decimal('0'))])),
                ('description', models.TextField(blank=True, help_text='Line item description', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('account', models.ForeignKey(help_text='Account being debited or credited', on_delete=django.db.models.deletion.PROTECT, related_name='journal_lines', to='api.account')),
                ('journal_entry', models.ForeignKey(help_text='Parent journal entry', on_delete=django.db.models.deletion.CASCADE, related_name='lines', to='api.journalentry')),
            ],
            options={
                'verbose_name': 'Journal Entry Line',
                'verbose_name_plural': 'Journal Entry Lines',
            },
        ),
        migrations.CreateModel(
            name='Expense',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(help_text='Expense title', max_length=200)),
                ('description', models.TextField(blank=True, help_text='Detailed description', null=True)),
                ('category', models.CharField(choices=[('maintenance', 'Maintenance'), ('repair', 'Repair'), ('utilities', 'Utilities'), ('insurance', 'Insurance'), ('tax', 'Property Tax'), ('cleaning', 'Cleaning'), ('security', 'Security'), ('other', 'Other')], help_text='Expense category', max_length=20)),
                ('amount', models.DecimalField(decimal_places=2, help_text='Expense amount', max_digits=10, validators=[django.core.validators.MinValueValidator(Decimal('0.01'))])),
                ('date', models.DateField(help_text='Date of expense')),
                ('receipt', models.FileField(blank=True, help_text='Receipt or invoice', null=True, upload_to='expense_receipts/')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('property', models.ForeignKey(help_text='Property this expense is for', on_delete=django.db.models.deletion.CASCADE, related_name='expenses', to='api.property')),
            ],
            options={
                'verbose_name': 'Expense',
                'verbose_name_plural': 'Expenses',
                'ordering': ['-date'],
            },
        ),
        migrations.CreateModel(
            name='Document',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(help_text='Document title', max_length=200)),
                ('file', models.FileField(help_text='Uploaded file', upload_to='documents/')),
                ('file_type', models.CharField(choices=[('contract', 'Contract'), ('id', 'Identification'), ('receipt', 'Receipt'), ('invoice', 'Invoice'), ('report', 'Report'), ('photo', 'Photo'), ('other', 'Other')], help_text='Type of document', max_length=20)),
                ('description', models.TextField(blank=True, help_text='Document description', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('lease', models.ForeignKey(blank=True, help_text='Associated lease', null=True, on_delete=django.db.models.deletion.CASCADE, related_name='documents', to='api.lease')),
                ('property', models.ForeignKey(blank=True, help_text='Associated property', null=True, on_delete=django.db.models.deletion.CASCADE, related_name='documents', to='api.property')),
                ('uploaded_by', models.ForeignKey(help_text='User who uploaded this document', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='uploaded_documents', to=settings.AUTH_USER_MODEL)),
                ('user', models.ForeignKey(blank=True, help_text='Associated user', null=True, on_delete=django.db.models.deletion.CASCADE, related_name='documents', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Document',
                'verbose_name_plural': 'Documents',
                'ordering': ['-created_at'],
            },
        ),
    ]
